--- a/src/main/resources/template/REST Server.xml
+++ b/src/main/resources/template/REST Server.xml
@@ -212,7 +212,7 @@
                     <bundle>
                         <artifact>nifi-record-serialization-services-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <descriptors>
                         <entry>
@@ -224,7 +224,8 @@
                         <entry>
                             <key>schema-cache</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
                                 <name>schema-cache</name>
                             </value>
                         </entry>
@@ -255,7 +256,8 @@
                                     <dependentValues>hwx-content-encoded-schema</dependentValues>
                                     <propertyName>schema-access-strategy</propertyName>
                                 </dependencies>
-                                <identifiesControllerService>org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
                                 <name>schema-registry</name>
                             </value>
                         </entry>
@@ -427,7 +429,7 @@
                     <bundle>
                         <artifact>nifi-record-serialization-services-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <comments></comments>
                     <descriptors>
@@ -447,7 +449,8 @@
                                     <dependentValues>hwx-content-encoded-schema</dependentValues>
                                     <propertyName>schema-access-strategy</propertyName>
                                 </dependencies>
-                                <identifiesControllerService>org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
                                 <name>schema-registry</name>
                             </value>
                         </entry>
@@ -504,7 +507,8 @@
                         <entry>
                             <key>schema-inference-cache</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
                                 <name>schema-inference-cache</name>
                             </value>
                         </entry>
@@ -612,7 +616,8 @@
                     <name>Collector Output</name>
                     <state>STOPPED</state>
                     <type>OUTPUT_PORT</type>
-                    <validationErrors>'Port 'Collector Output'' is invalid because Port has no outgoing connections</validationErrors>
+                    <validationErrors>'Port 'Collector Output'' is invalid because Port has no
+                        outgoing connections</validationErrors>
                 </outputPorts>
                 <processors>
                     <id>05b162f9-f620-306a-0000-000000000000</id>
@@ -625,7 +630,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -636,14 +641,16 @@
                             <entry>
                                 <key>record-reader</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
                                     <name>record-reader</name>
                                 </value>
                             </entry>
                             <entry>
                                 <key>record-writer</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
                                     <name>record-writer</name>
                                 </value>
                             </entry>
@@ -705,7 +712,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -788,7 +795,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -860,7 +867,7 @@
                     <bundle>
                         <artifact>nifi-update-attribute-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -961,7 +968,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -996,7 +1003,8 @@
                             <entry>
                                 <key>SSL Context Service</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.ssl.RestrictedSSLContextService</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.ssl.RestrictedSSLContextService</identifiesControllerService>
                                     <name>SSL Context Service</name>
                                 </value>
                             </entry>
@@ -1060,7 +1068,8 @@
                             <entry>
                                 <key>record-reader</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
                                     <name>record-reader</name>
                                 </value>
                             </entry>
@@ -1070,7 +1079,8 @@
                                     <dependencies>
                                         <propertyName>record-reader</propertyName>
                                     </dependencies>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
                                     <name>record-writer</name>
                                 </value>
                             </entry>
@@ -1168,7 +1178,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
