--- a/src/main/resources/template/Database-MySQL.xml
+++ b/src/main/resources/template/Database-MySQL.xml
@@ -268,7 +268,7 @@
                     <bundle>
                         <artifact>nifi-record-serialization-services-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <descriptors>
                         <entry>
@@ -280,7 +280,8 @@
                         <entry>
                             <key>schema-cache</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
                                 <name>schema-cache</name>
                             </value>
                         </entry>
@@ -311,7 +312,8 @@
                                     <dependentValues>hwx-content-encoded-schema</dependentValues>
                                     <propertyName>schema-access-strategy</propertyName>
                                 </dependencies>
-                                <identifiesControllerService>org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
                                 <name>schema-registry</name>
                             </value>
                         </entry>
@@ -483,7 +485,7 @@
                     <bundle>
                         <artifact>nifi-record-serialization-services-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <descriptors>
                         <entry>
@@ -502,7 +504,8 @@
                                     <dependentValues>hwx-content-encoded-schema</dependentValues>
                                     <propertyName>schema-access-strategy</propertyName>
                                 </dependencies>
-                                <identifiesControllerService>org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
                                 <name>schema-registry</name>
                             </value>
                         </entry>
@@ -592,7 +595,7 @@
                     <bundle>
                         <artifact>nifi-record-serialization-services-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <comments></comments>
                     <descriptors>
@@ -612,7 +615,8 @@
                                     <dependentValues>hwx-content-encoded-schema</dependentValues>
                                     <propertyName>schema-access-strategy</propertyName>
                                 </dependencies>
-                                <identifiesControllerService>org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.schemaregistry.services.SchemaRegistry</identifiesControllerService>
                                 <name>schema-registry</name>
                             </value>
                         </entry>
@@ -669,7 +673,8 @@
                         <entry>
                             <key>schema-inference-cache</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.serialization.RecordSchemaCacheService</identifiesControllerService>
                                 <name>schema-inference-cache</name>
                             </value>
                         </entry>
@@ -771,7 +776,7 @@
                     <bundle>
                         <artifact>nifi-dbcp-service-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <comments></comments>
                     <descriptors>
@@ -796,14 +801,16 @@
                         <entry>
                             <key>kerberos-user-service</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.kerberos.KerberosUserService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.kerberos.KerberosUserService</identifiesControllerService>
                                 <name>kerberos-user-service</name>
                             </value>
                         </entry>
                         <entry>
                             <key>kerberos-credentials-service</key>
                             <value>
-                                <identifiesControllerService>org.apache.nifi.kerberos.KerberosCredentialsService</identifiesControllerService>
+                                <identifiesControllerService>
+                                    org.apache.nifi.kerberos.KerberosCredentialsService</identifiesControllerService>
                                 <name>kerberos-credentials-service</name>
                             </value>
                         </entry>
@@ -972,7 +979,8 @@
                     <name>Collector Output</name>
                     <state>STOPPED</state>
                     <type>OUTPUT_PORT</type>
-                    <validationErrors>'Port 'Collector Output'' is invalid because Port has no outgoing connections</validationErrors>
+                    <validationErrors>'Port 'Collector Output'' is invalid because Port has no
+                        outgoing connections</validationErrors>
                 </outputPorts>
                 <processors>
                     <id>08a7f6b5-5b91-34aa-0000-000000000000</id>
@@ -985,7 +993,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1058,7 +1066,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1131,7 +1139,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1142,14 +1150,16 @@
                             <entry>
                                 <key>record-reader</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
                                     <name>record-reader</name>
                                 </value>
                             </entry>
                             <entry>
                                 <key>record-writer</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
                                     <name>record-writer</name>
                                 </value>
                             </entry>
@@ -1210,7 +1220,7 @@
                     <bundle>
                         <artifact>nifi-update-attribute-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1301,7 +1311,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1312,14 +1322,16 @@
                             <entry>
                                 <key>record-reader</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordReaderFactory</identifiesControllerService>
                                     <name>record-reader</name>
                                 </value>
                             </entry>
                             <entry>
                                 <key>record-writer</key>
                                 <value>
-                                    <identifiesControllerService>org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
+                                    <identifiesControllerService>
+                                        org.apache.nifi.serialization.RecordSetWriterFactory</identifiesControllerService>
                                     <name>record-writer</name>
                                 </value>
                             </entry>
@@ -1381,7 +1393,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
@@ -1568,7 +1580,7 @@
                     <bundle>
                         <artifact>nifi-standard-nar</artifact>
                         <group>org.apache.nifi</group>
-                        <version>1.16.3</version>
+                        <version>1.23.0</version>
                     </bundle>
                     <config>
                         <backoffMechanism>PENALIZE_FLOWFILE</backoffMechanism>
