--- a/src/main/resources/template/converter.xml
+++ b/src/main/resources/template/converter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <template encoding-version="1.3">
-    <description></description>
+    <description>Update 2023 08 28</description>
     <groupId>d1a74cfc-0188-1000-d50c-3ad3491fbc00</groupId>
     <name>converter</name>
     <snippet>
